@@ -1,3 +1,11 @@
+2003-02-02  Mo DeJong  <mdejong@users.sourceforge.net>
+
+	* src/jacl/tcl/lang/FileCmd.java (copyRenameOneFile):
+	Check for case where a directory cannot be renamed
+	because the target dir contains a file. Raise
+	a EEXIST error in this case. This gets a number
+	of test cases in tests/jacl/FileCmd.test to pass.
+
 2003-02-01  Mo DeJong  <mdejong@users.sourceforge.net>
 
 	* src/jacl/tcl/lang/FileCmd.java (cmdProc):
